# ten-drops

./: MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
ten_drops/: __init__.py  button.py  cli.py  cover.py  drop.py  droplet.py  game.py  notification.py  panel.py  text.py
ten_drops/asset/: __init__.py
